--- a/css/main.css
+++ b/css/main.css
@@ -93,10 +93,6 @@ main {
   display: grid;
 }
 
-.social-image svg {
-  height: 50px;
-}
-
 .section-title {
     font-size: 1em;
     text-transform: uppercase;
@@ -178,7 +174,7 @@ main {
   color: #fff !important;
 }
 
-.traffic, .mobile-users, .daily, .social-container, .members, .activity {
+.traffic, .mobile-users, .daily, .social-container, .members, .activity, .message {
   border-bottom: 1px solid lightgrey;
 }
 
@@ -191,6 +187,57 @@ main {
 }
 
 /* Social Stat Styles */
+
+.social-container {
+  padding: 15px 15px 35px 15px;
+}
+
+.inner-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding-top: 10px;
+}
+
+.social-image svg {
+  height: 70px;
+  width: auto;
+  background: #7479ba;
+  border-radius: 50%;
+  /* padding: 10px; */
+}
+
+.social-image path {
+  fill: #fff;
+  height: auto;
+}
+
+.social-box {
+  align-self: center;
+  background-color: #f3f4f7;
+  padding: 10px 40px 10px 10px;
+  margin: 5px;
+  border: solid 1px #bbb;
+  display: flex;
+}
+
+.social-image {
+  padding: 0 20px 0 10px;
+}
+
+.social-text p:nth-child(1) {
+  color: #7479ba;
+  font-weight: 600;
+  font-size: 1.25em;
+  margin: 0;
+}
+
+.social-text p:nth-child(2) {
+  font-size: 3em;
+  color: #666;
+  margin: 0;
+  font-weight: 300;
+}
 
 /* Media Queries */
 
@@ -233,4 +280,7 @@ main {
     width: 50%;
   }
 
+  .message {
+    border-bottom: none;
+  }
 }
