--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,7 @@ main {
   border-bottom: solid 1px #bbb;
   border-left: solid 1px #bbb;
   position: relative;
+  text-indent: 10px;
 }
 
 .main-header input {
@@ -219,6 +220,7 @@ main {
   margin: 5px;
   border: solid 1px #bbb;
   display: flex;
+  min-width: 299px;
 }
 
 .social-image {
@@ -256,7 +258,7 @@ main {
   border-bottom: solid 1px lightgrey;
   padding-bottom: 15px;
   padding-top: 15px;
-  width: auto;
+  width: 100%;
 }
 
 .members .members-container:nth-child(2) {
@@ -271,6 +273,10 @@ main {
   margin-right: 10px;
 }
 
+.members-text {
+  width: 100%;
+}
+
 .members-text p {
   margin: 0;
 }
@@ -282,10 +288,11 @@ main {
 }
 
 .member-date {
-  margin-left: auto;
   font-size: .8em;
   color: #666;
   font-weight: 400;
+  align-self: center;
+
 }
 
 .members-container a {
@@ -304,11 +311,12 @@ main {
   font-size: 1em;
   color: #666;
   font-weight: 400;
+
 }
 
 .comment-time {
   margin: 0;
-  font-size: .8em;
+  font-size: .9em;
   color: #666;
   font-weight: 400;
 }
@@ -323,12 +331,114 @@ main {
 
 .activity h3 {
   margin: 10px 0;
+  width: auto;
 }
 
 .right-arrow {
- margin-left: auto;
+  display: none;
+  align-self: center;
+  color: #7479ba;
 }
 
+/* Message User Styles */
+
+.message {
+  padding: 10px 20px;
+  margin-bottom: 25px;
+}
+
+#userField, #messageField {
+  background: #f3f4f7;
+  width: 100%;
+  border: solid 1px #bbb;
+  height: 40px;
+  border-radius: 5px;
+  text-indent: 10px;
+  margin-bottom: 10px;
+}
+
+#messageField {
+  height: 120px;
+  padding: 10px;
+  text-indent: 0;
+}
+
+#send {
+  background: #7479ba;
+  padding: 10px;
+  border-radius: 5px;
+  width: 100%;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+/* Settings Styles */
+
+.settings {
+  padding: 10px 20px;
+  margin-bottom: 25px;
+}
+
+.switch-light {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding-bottom: 30px;
+}
+
+.switch-light strong {
+  flex-basis: 60%;
+  color: #666;
+}
+
+.switch-ios.switch-light > span {
+  width: 50%;
+  max-width: 100px;
+}
+
+.switch-ios.switch-light input:checked ~ span {
+  border-color: #7479ba;
+  box-shadow: inset 0 0 0 30px #7479ba;
+}
+
+.switch-ios.switch-light input:checked ~ span a {
+  border-color: #7479ba;
+}
+
+#timezone {
+  width: 100%;
+  height: 40px;
+  background: #f3f4f7;
+  border: solid 1px #bbb;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  color: #666;
+
+}
+
+.settings-button {
+  display: flex;
+  justify-content: space-around;
+}
+
+#save {
+  width: 50%;
+  padding: 10px;
+  background: #7479ba;
+  border-radius: 5px;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+#cancel {
+  width: 50%;
+  padding: 10px;
+  background: #bbb;
+  border-radius: 5px;
+  color: #fff;
+  text-transform: uppercase;
+  margin-left: 15px;
+}
 
 
 /* Media Queries */
@@ -375,4 +485,23 @@ main {
   .message {
     border-bottom: none;
   }
+
+  .members-text {
+    width: 75%;
+  }
+
+  .member-date {
+    margin: 0 0 0 auto;
+  }
+
+  .right-arrow {
+    display: inline-block;
+    margin-left: auto;
+  }
+
+  .switch-light strong {
+    flex-basis: 30%;
+  }
+
+
 }
